--- a/topbar.html
+++ b/topbar.html
@@ -1,4 +1,6 @@
 <h1>
-<a class="dp" href="">Home</a>
-<a class="dp" href="projects/">Projects</a>
-<a class="dp" href="https://github.com/ant-7802"><img class="notmg" src="assets/github.png"></a> </h1>
+<a class="dp" href="/">Home</a>
+<a class="dp" href="/projects/">Projects</a>
+<a class="dp" href="https://github.com/ant-7802"><img class="notmg" src="/assets/github.png"></a> 
+<a class="dp" href="/noVNC/"><img class="notmg" src="/assets/novnc.svg"></svg></a> 
+</h1>
